# weston

./: configure.ac  weston.ini
clients/: Makefile.am  desktop-shell.c  dnd.c  editor.c  window.c  window.h
data/: Makefile.am
protocol/: desktop-shell.xml
shared/: cairo-util.c
src/: Makefile.am  clipboard.c  compositor-drm.c  compositor-rpi.c  compositor-wayland.c  compositor-x11.c  compositor.c  compositor.h  evdev-touchpad.c  evdev.c  evdev.h  event-names.h  input-state.c  input-state.h  input.c  libevdev-int.h  libevdev.c  libevdev.h  log.c  shell.c  udev-seat.c
src/xwayland/: window-manager.c  xwayland.h
tests/: weston-test.c
